--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -1,57 +1,57 @@
 ---
-- name: "SCORED | 9.1.1 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Firewall state' is set to 'On (recommended)'"
-  win_firewall:
-    state: enabled
-    profile: Domain
-  when:
-    - rule_9_1_1
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.1.1
-    - patch
+# - name: "SCORED | 9.1.1 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Firewall state' is set to 'On (recommended)'"
+#   win_firewall:
+#     state: enabled
+#     profile: Domain
+#   when:
+#     - rule_9_1_1
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.1.1
+#     - patch
 
-- name: "SCORED | 9.1.2 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Inbound connections' is set to 'Block (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
-    name: DefaultInboundAction
-    data: 1
-    type: dword
-  when:
-    - rule_9_1_2
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.1.2
-    - patch
+# - name: "SCORED | 9.1.2 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Inbound connections' is set to 'Block (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
+#     name: DefaultInboundAction
+#     data: 1
+#     type: dword
+#   when:
+#     - rule_9_1_2
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.1.2
+#     - patch
 
-- name: "SCORED | 9.1.3 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Outbound connections' is set to 'Allow (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
-    name: DefaultOutboundAction
-    data: 0
-    type: dword
-  when:
-    - rule_9_1_3
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.1.3
-    - patch
+# - name: "SCORED | 9.1.3 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Outbound connections' is set to 'Allow (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
+#     name: DefaultOutboundAction
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_1_3
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.1.3
+#     - patch
 
-- name: "SCORED | 9.1.4 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Settings: Display a notification' is set to 'No'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
-    name: DisableNotifications
-    data: 0
-    type: dword
-  when:
-    - rule_9_1_4
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.1.4
-    - patch
+# - name: "SCORED | 9.1.4 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Settings: Display a notification' is set to 'No'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
+#     name: DisableNotifications
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_1_4
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.1.4
+#     - patch
 
 # title has slashes switched
 - name: "SCORED | 9.1.5 | PATCH | (L1) Ensure 'Windows Firewall: Domain: Logging: Name' is set to '%SystemRoot%/System32/logfiles/firewall/domainfw.log'"
@@ -110,59 +110,59 @@
     - rule_9.1.7
     - patch
 
-- name: "SCORED | 9.2.1 | PATCH | (L1) Ensure 'Windows Firewall: Private: Firewall state' is set to 'On (recommended)'"
-  win_firewall:
-    state: enabled
-    profile: Private
-  when:
-    - rule_9_2_1
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.2.1
-    - patch
+# - name: "SCORED | 9.2.1 | PATCH | (L1) Ensure 'Windows Firewall: Private: Firewall state' is set to 'On (recommended)'"
+#   win_firewall:
+#     state: enabled
+#     profile: Private
+#   when:
+#     - rule_9_2_1
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.2.1
+#     - patch
 
-- name: "SCORED | 9.2.2 | PATCH | (L1) Ensure 'Windows Firewall: Private: Inbound connections' is set to 'Block (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
-    name: DefaultInboundAction
-    data: 1
-    type: dword
-  when:
-    - rule_9_2_2
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.2.2
-    - patch
+# - name: "SCORED | 9.2.2 | PATCH | (L1) Ensure 'Windows Firewall: Private: Inbound connections' is set to 'Block (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
+#     name: DefaultInboundAction
+#     data: 1
+#     type: dword
+#   when:
+#     - rule_9_2_2
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.2.2
+#     - patch
 
-- name: "SCORED | 9.2.3 | PATCH | (L1) Ensure 'Windows Firewall: Private: Outbound connections' is set to 'Allow (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
-    name: DefaultOutboundAction
-    data: 0
-    type: dword
-  when:
-    - rule_9_2_3
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.2.3
-    - patch
+# - name: "SCORED | 9.2.3 | PATCH | (L1) Ensure 'Windows Firewall: Private: Outbound connections' is set to 'Allow (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
+#     name: DefaultOutboundAction
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_2_3
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.2.3
+#     - patch
 
-- name: "SCORED | 9.2.4 | PATCH | (L1) Ensure 'Windows Firewall: Private: Settings: Display a notification' is set to 'No'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
-    name: DisableNotifications
-    data: 0
-    type: dword
-  when:
-    - rule_9_2_4
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.2.4
-    - patch
+# - name: "SCORED | 9.2.4 | PATCH | (L1) Ensure 'Windows Firewall: Private: Settings: Display a notification' is set to 'No'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
+#     name: DisableNotifications
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_2_4
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.2.4
+#     - patch
 
 # title has slashes switched
 - name: "SCORED | 9.2.5 | PATCH | (L1) Ensure 'Windows Firewall: Private: Logging: Name' is set to '%SystemRoot%/System32/logfiles/firewall/privatefw.log'"
@@ -221,76 +221,74 @@
     - rule_9.2.8
     - patch
 
-#d
+# - name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
+#   win_firewall:
+#     state: enabled
+#     profile: Public
+#   when:
+#     - rule_9_3_1
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.1
+#     - patch
 
-- name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
-  win_firewall:
-    state: enabled
-    profile: Public
-  when:
-    - rule_9_3_1
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.1
-    - patch
+# - name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+#     name: DefaultInboundAction
+#     data: 1
+#     type: dword
+#   when:
+#     - rule_9_3_2
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.2
+#     - patch
 
-- name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-    name: DefaultInboundAction
-    data: 1
-    type: dword
-  when:
-    - rule_9_3_2
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.2
-    - patch
+# - name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+#     name: DefaultOutboundAction
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_3_3
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.3
+#     - patch
 
-- name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-    name: DefaultOutboundAction
-    data: 0
-    type: dword
-  when:
-    - rule_9_3_3
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.3
-    - patch
+# - name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+#     name: DisableNotifications
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_3_4
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.4
+#     - patch
 
-- name: "SCORED | 9.3.4 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Display a notification' is set to 'No'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-    name: DisableNotifications
-    data: 0
-    type: dword
-  when:
-    - rule_9_3_4
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.4
-    - patch
-
-- name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
-  win_regedit:
-    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-    name: AllowLocalPolicyMerge
-    data: 0
-    type: dword
-  when:
-    - rule_9_3_5
-    - not win_skip_for_test
-  tags:
-    - level1-domaincontroller
-    - level1-memberserver
-    - rule_9.3.5
-    - patch
+# - name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
+#   win_regedit:
+#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+#     name: AllowLocalPolicyMerge
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_9_3_5
+#     - not win_skip_for_test
+#   tags:
+#     - level1-domaincontroller
+#     - level1-memberserver
+#     - rule_9.3.5
+#     - patch
 
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
