--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -289,11 +289,11 @@
 
 - name: "SCORED | 18_3_3 | PATCH | L1 Ensure Configure SMB v1 server is set to Disabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Services\LanmanServer\Parameters
-    name: SMB1
-    data: 0
-    type: dword
-    state: present
+      path: HKLM:\SYSTEM\CurrentControlSet\Services\LanmanServer\Parameters
+      name: SMB1
+      data: 0
+      type: dword
+      state: present
   notify: reboot_windows
   when: rule_18_3_3
   tags:
@@ -304,11 +304,11 @@
 
 - name: "SCORED | 18_3_4 | PATCH | L1 Ensure Enable Structured Exception Handling Overwrite Protection SEHOP is set to Enabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\kernel
-    name: DisableExceptionChainValidation
-    data: 1
-    type: dword
-    state: present
+      path: HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\kernel
+      name: DisableExceptionChainValidation
+      data: 1
+      type: dword
+      state: present
   when: rule_18_3_4
   tags:
     - level1
@@ -345,11 +345,11 @@
 
 - name: "SCORED | 18.3.6 | PATCH | L1 Ensure WDigest Authentication is set to Disabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Control\SecurityProviders\Wdigest
-    state: present
-    value: UseLogonCredential
-    data: 0
-    datatype: dword
+      path: HKLM:\SYSTEM\CurrentControlSet\Control\SecurityProviders\Wdigest
+      state: present
+      value: UseLogonCredential
+      data: 0
+      datatype: dword
   when: rule_18_3_6
   tags:
     - level1
@@ -359,11 +359,11 @@
 
 - name: "SCORED | 18.4.1 | PATCH | L1 Ensure MSS AutoAdminLogon Enable Automatic Logon not recommended is set to Disabled"
   win_regedit:
-    path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
-    state: present
-    value: AutoAdminLogon
-    data: 0
-    datatype: dword
+      path: HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Winlogon
+      state: present
+      value: AutoAdminLogon
+      data: 0
+      datatype: dword
   when: rule_18_4_1
   tags:
     - level1
@@ -373,11 +373,11 @@
 
 - name: "SCORED | 18.4.2 | PATCH | L1 Ensure MSS DisableIPSourceRouting IPv6 IP source routing protection level protects against packet spoofing is set to Enabled Highest protection source routing is completely disabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
-    state: present
-    value: DisableIPSourceRouting
-    data: 2
-    datatype: dword
+      path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip6\Parameters
+      state: present
+      value: DisableIPSourceRouting
+      data: 2
+      datatype: dword
   when: rule_18_4_2
   tags:
     - level1
@@ -387,11 +387,11 @@
 
 - name: "SCORED | 18.4.3 | PATCH | L1 Ensure MSS DisableIPSourceRouting IP source routing protection level protects against packet spoofing is set to Enabled Highest protection source routing is completely disabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters
-    state: present
-    value: DisableIPSourceRouting
-    data: 2
-    datatype: dword
+      path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters
+      state: present
+      value: DisableIPSourceRouting
+      data: 2
+      datatype: dword
   when: rule_18_4_3
   tags:
     - level1
@@ -401,11 +401,11 @@
 
 - name: "SCORED | 18.4.4 | PATCH | L1 Ensure MSS EnableICMPRedirect Allow ICMP redirects to override OSPF generated routes is set to Disabled"
   win_regedit:
-    path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters
-    state: present
-    value: EnableICMPRedirect
-    data: 0
-    datatype: dword
+      path: HKLM:\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters
+      state: present
+      value: EnableICMPRedirect
+      data: 0
+      datatype: dword
   when: rule_18_4_4
   tags:
     - level1
@@ -518,6 +518,7 @@
     - rule_18.4.12
     - patch
 
+
 - name: "SCORED | 18.5.4.1 | PATCH | L1 Set NetBIOS node type to P-node Ensure NetBT Parameter NodeType is set to 0x2 2 MS Only"
   win_regedit:
     path: HKLM:\System\CurrentControlSet\Services\NetBT\Parameters
@@ -581,7 +582,7 @@
         name: AllowLLTDIOOndomain
         data: 0
         type: dword
-
+    
     - name: "SCORED | 18.5.9.1 | PATCH | L2 Ensure Turn on Mapper IO LLTDIO driver is set to Disabled | AllowLLTDIOOnPublicNet"
       win_regedit:
         path: HKLM:\Software\Policies\Microsoft\Windows\Lltd
@@ -1181,10 +1182,10 @@
         type: dword
     - name: "SCORED | 18.8.25.1 | PATCH | L2 Ensure Support device authentication using certificate is set to Enabled Automatic | DevicePKInitEnabled"
       win_regedit:
-        path: HKLM:\Software\Microsoft\Windows\CurrentVersion\Policies\System\kerberos\parameters
-        name: DevicePKInitEnabled
-        data: 1
-        type: dword
+          path: HKLM:\Software\Microsoft\Windows\CurrentVersion\Policies\System\kerberos\parameters
+          name: DevicePKInitEnabled
+          data: 1
+          type: dword
   when: rule_18_8_25_1
   tags:
     - level2
@@ -1193,10 +1194,10 @@
 
 - name: "SCORED | 18.8.26.1 | PATCH | L1 Ensure Enumeration policy for external devices incompatible with Kernel DMA Protection is set to Enabled Block All"
   win_regedit:
-    path: HKLM:\Software\Policies\Microsoft\Windows\Kernel DMA Protection
-    name: DeviceEnumerationPolicy
-    data: 0
-    type: dword
+      path: HKLM:\Software\Policies\Microsoft\Windows\Kernel DMA Protection
+      name: DeviceEnumerationPolicy
+      data: 0
+      type: dword
   when: rule_18_8_26_1
   tags:
     - level1
@@ -2398,6 +2399,121 @@
     - rule_18.9.95.2
     - patch
 
+- name: "SCORED | 18.9.97.1.1 | PATCH | L1 Ensure Allow Basic authentication is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+    name: AllowBasic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_1_1
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.1.1
+    - patch
+
+- name: "SCORED | 18.9.97.1.2 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+    name: AllowUnencryptedTraffic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_1_2
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.1.2
+    - patch
+
+- name: "SCORED | 18.9.97.1.3 | PATCH | L1 Ensure Disallow Digest authentication is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+    name: AllowDigest
+    data: 0
+    type: dword
+  when: rule_18_9_97_1_3
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.1.3
+    - patch
+
+- name: "SCORED | 18.9.97.2.1 | PATCH | L1 Ensure Allow Basic authentication is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service
+    name: AllowBasic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_2_1
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.2.1
+    - patch
+
+#This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
+- name: "SCORED | 18.9.97.2.2 | PATCH | L2 Ensure Allow remote server management through WinRM is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service
+    name: AllowAutoConfig
+    data: 1
+    type: dword
+  when:
+    - rule_18_9_97_2_2
+    - not win_skip_for_test
+  tags:
+    - level2
+    - rule_18.9.97.2.2
+    - patch
+
+- name: "SCORED | 18.9.97.2.3 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service
+    name: AllowUnencryptedTraffic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_2_3
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.2.3
+    - patch
+
+- name: "SCORED | 18.9.97.2.4 | PATCH | L1 Ensure Disallow WinRM from storing RunAs credentials is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service
+    name: DisableRunAs
+    data: 1
+    type: dword
+  when: rule_18_9_97_2_4
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.2.4
+    - patch
+
+#This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
+- name: "SCORED | 18.9.98.1 | PATCH | L2 Ensure Allow Remote Shell Access is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service\Winrs
+    name: AllowRemoteShellAccess
+    data: 1
+    type: dword
+  when:
+    - rule_18_9_98_1
+    - not win_skip_for_test
+  tags:
+    - level2
+    - rule_18.9.98.1
+    - patch
 
 - name: "SCORED | 18.9.99.2.1 | PATCH | L1 Ensure Prevent users from modifying settings is set to Enabled"
   win_regedit:
@@ -2462,24 +2578,24 @@
 
 - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days"
   block:
-    - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days | DeferQualityUpdates"
-      win_regedit:
-        path: HKLM:\SOFTWARE\Policies\Microsoft\Windows\WindowsUpdate
-        name: DeferQualityUpdates
-        data: 1
-        type: dword
-    - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days | DeferQualityUpdatesPeriodInDays"
-      win_regedit:
-        path: HKLM:\SOFTWARE\Policies\Microsoft\Windows\WindowsUpdate
-        name: DeferQualityUpdatesPeriodInDays
-        data: 0
-        type: dword
-      when: rule_18_9_102_1_3
-      tags:
-        - level1
-        - level2
-        - rule_18.9.102.1.3
-        - patch
+  - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days | DeferQualityUpdates"
+    win_regedit:
+      path: HKLM:\SOFTWARE\Policies\Microsoft\Windows\WindowsUpdate
+      name: DeferQualityUpdates
+      data: 1
+      type: dword
+  - name: "SCORED | 18.9.102.1.3 | PATCH | L1 Ensure Select when Quality Updates are received is set to Enabled 0 days | DeferQualityUpdatesPeriodInDays"
+    win_regedit:
+      path: HKLM:\SOFTWARE\Policies\Microsoft\Windows\WindowsUpdate
+      name: DeferQualityUpdatesPeriodInDays
+      data: 0
+      type: dword
+    when: rule_18_9_102_1_3
+    tags:
+    - level1
+    - level2
+    - rule_18.9.102.1.3
+    - patch
 
 - name: "SCORED | 18.9.102.2 | PATCH | L1 Ensure Configure Automatic Updates is set to Enabled"
   win_regedit:
@@ -2519,3 +2635,4 @@
     - level2
     - rule_18.9.102.4
     - patch
+
