--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -275,20 +275,20 @@
     - rule_9.3.4
     - patch
 
-# - name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: AllowLocalPolicyMerge
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_9_3_5
-#     - not win_skip_for_test
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.5
-#     - patch
+- name: "SCORED | 9.3.5 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local firewall rules' is set to 'No'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: AllowLocalPolicyMerge
+    data: 1
+    type: dword
+  when:
+    - rule_9_3_5
+    - not win_skip_for_test
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.5
+    - patch
 
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
