--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -290,6 +290,9 @@
     - rule_9.3.5
     - patch
 
+- name: check 9.3.5
+  win_shell: Get-ItemProperty -path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile\AllowLocalPolicyMerge
+
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
 #     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
