--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -293,6 +293,32 @@
 - name: check 9.3.5
   win_shell: Get-ItemProperty -path HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
 
+- name: add listner
+  win_shell: |
+    $Cert = New-SelfSignedCertificate -CertstoreLocation Cert:\LocalMachine\My -DnsName "packer"
+    New-Item -Path WSMan:\LocalHost\Listener -Transport HTTPS -Address * -CertificateThumbPrint $Cert.Thumbprint -Force
+
+    write-output "Setting up WinRM"
+    write-host "(host) setting up WinRM"
+
+    winrm quickconfig -q
+    winrm set "winrm/config/service" '@{AllowUnencrypted="true"}'
+    winrm set "winrm/config/client" '@{AllowUnencrypted="true"}'
+    winrm set "winrm/config/service/auth" '@{Basic="true"}'
+    winrm set "winrm/config/client/auth" '@{Basic="true"}'
+    winrm set "winrm/config/service/auth" '@{CredSSP="true"}'
+    winrm set "winrm/config/listener?Address=*+Transport=HTTPS" "@{Port=`"5986`";Hostname=`"packer`";CertificateThumbprint=`"$($Cert.Thumbprint)`"}"
+
+ 
+    netsh advfirewall firewall set rule group="remote administration" new enable=yes
+    netsh firewall add portopening TCP 5986 "Port 5986"
+
+    # Restart WinRM, and set it so that it auto-launches on startup.
+    cmd.exe /c net stop winrm
+    cmd.exe /c sc config winrm start= auto
+    cmd.exe /c net start winrm
+
+
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
 #   win_regedit:
 #     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
