--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -307,7 +307,7 @@
     - patch
 
 - name: check 9.3.5
-  win_shell: Get-NetFirewallRule - All
+  win_shell: Get-NetFirewallRule 
 
 
 # - name: "SCORED | 9.3.6 | PATCH | (L1) Ensure 'Windows Firewall: Public: Settings: Apply local connection security rules' is set to 'No'"
