--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -676,16 +676,20 @@
 #     - patch
 
 - name: "SCORED | 2.3.1.6 | PATCH | L1 Configure Accounts Rename guest account"
-  win_security_policy:
-    section: System Access
-    key: NewGuestName
-    value: BobCooper
-  when: rule_2_3_1_6
-  tags:
-    - level1
-    - level2
-    - rule_2.3.1.6
-    - patch
+  win_shell: |
+    Configuration CIS_WindowsServer2019_v110 {
+      param (
+        [string[]]$NodeName ='localhost'
+        )
+      Import-DscResource -ModuleName 'PSDesiredStateConfiguration'
+      Import-DscResource -ModuleName 'AuditPolicyDsc'
+      Import-DscResource -ModuleName 'SecurityPolicyDsc'
+      Node $NodeName {
+        SecurityOption AccountSecurityOptions {
+          Accounts_Rename_guest_account = 'User_Guest'
+          }
+      }
+    }
 
 - name: "SCORED | 2.3.2.1 | PATCH | L1 Ensure Audit Force audit policy subcategory settings Windows Vista or later to override audit policy category settings is set to Enabled"
   win_regedit:
