--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -636,17 +636,17 @@
     - rule_2.3.1.2
     - patch
 
-- name: "SCORED | 2.3.1.3 | PATCH | L1 Ensure Accounts Guest account status is set to Disabled MS only"
-  win_security_policy:
-    section: System Access
-    key: EnableGuestAccount
-    value: 0
-  when: rule_2_3_1_3
-  tags:
-    - level1
-    - level2
-    - rule_2.3.1.3
-    - patch
+# - name: "SCORED | 2.3.1.3 | PATCH | L1 Ensure Accounts Guest account status is set to Disabled MS only"
+#   win_security_policy:
+#     section: System Access
+#     key: EnableGuestAccount
+#     value: 0
+#   when: rule_2_3_1_3
+#   tags:
+#     - level1
+#     - level2
+#     - rule_2.3.1.3
+#     - patch
 
 - name: "SCORED | 2.3.1.4 | PATCH | L1 Ensure Accounts Limit local account use of blank passwords to console logon only is set to Enabled"
   win_regedit:
